--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
 <body>
     <div class="blog">
-        <div class="container">
-            <div class="blog__rigth">
-                <p class="blog__title">Новый пост</p>
-                <input class="blog__text" placeholder="Заголовок" type="text">
-                <button class="blog__btn">Опубликовать</button>
-            </div>
+        <div class="blog__left">
+            <h2 class="blog__left-title">Новый пост</h2>
+            <input id="js-title-input" class="blog__left-subtitle" placeholder="Заголовок" type="text">
+            <button id="js-publication-btn" class="blog__left-btn">Опубликовать</button>
+        </div>
+        <div class="blog__right">
+            <h2 class="blog__right-title">Лента</h2>
+            <p id="js-add-post" class="blog__right-subtitle">тут пока пусто...</p>
         </div>
     </div>
     <script src="index.js"></script>
